fix code to make work

--- a/examples/bioasq/bioasq_rag_advanced.ipynb
+++ b/examples/bioasq/bioasq_rag_advanced.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from weave_example_demo.llm_types.prompts import PromptTemplate\n",
-    "from weave_example_demo.llm_types.models.generic_model import GenericLLMModel\n"
+    "from weave_example_demo.llm_types.models.generic_model import GenericLLMModel\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -25,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weave.init('bioasq-rag-data')"
+    "weave.init('visa-bioasq-rag')"
    ]
   },
   {
@@ -144,6 +145,17 @@
    "outputs": [],
    "source": [
     "vector_store.set_embedding_model(embedding_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector_store.embeddings_matrix = np.array(\n",
+    "            [doc_emb[\"embedding\"] for doc_emb in vector_store.article_embeddings]\n",
+    ")"
    ]
   },
   {
